[project]
name = "members-subgraph"
version = "1.0.0"
readme = "README.md"

requires-python = ">=3.11"
dependencies = [
    "cachetools==6.2.1",
    "fastapi==0.116.1",
    "httpx==0.28.1",
    "pymongo==4.14.1",
    "strawberry-graphql[debug-server]==0.281.0",
    "uvicorn==0.35.0",
]

[tool.ruff]
line-length = 79
indent-width = 4

[tool.ruff.lint]
# line too long, unsorted imports, unused imports
extend-select = ["E501", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
