[project]
name = "members-subgraph"
version = "1.0.0"
readme = "README.md"

requires-python = ">=3.14"
dependencies = [
    "cachetools==7.0.5",
    "fastapi==0.135.2",
    "httpx==0.28.1",
    "pymongo==4.16.0",
    "strawberry-graphql[cli]==0.312.2",
    "uvicorn==0.42.0",
]

[tool.ruff]
line-length = 79
indent-width = 4

[tool.ruff.lint]
# line too long, unsorted imports, unused imports
extend-select = ["E501", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
